# MoBA

./: README.md  pyproject.toml  requirements.txt
examples/: llama.py
moba/: moba_efficient.py
tests/: test_moba_attn.py  test_moba_speedup.py
